# agent-skills-system

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT_LOOP_ARCHITECTURE.md  BACKEND_CHAT_INTEGRATION_SUMMARY.md  DELETE_SESSION_FEATURE.md  FIXES_SUMMARY.md  GITHUB_UPLOAD_GUIDE.md  LLM_IMPLEMENTATION_GUIDE.md  LLM_IMPLEMENTATION_SUMMARY.md  LLM_PROVIDER_CONFIGURATION.md  LLM_REQUIREMENTS.md  LLM_SKILL_MATCHING_DESIGN.md  LLM_WORKFLOW_NATURAL_LANGUAGE_DESIGN.md  MESSAGE_LOADING_FIX.md  MIGRATION_GUIDE.md  Makefile  NATURAL_LANGUAGE_WORKFLOW_GUIDE.md  NATURAL_LANGUAGE_WORKFLOW_SUMMARY.md  PROJECT_STARTUP.md  PYTHON312_COMPATIBILITY_REPORT.md  QUICK_START.md  README.md  SESSION_MANAGEMENT_IMPLEMENTATION.md  SESSION_STATE_ISSUE_ANALYSIS.md  SESSION_STATE_PERSISTENCE_FIX.md  minimal_requirements.txt  quick_test.py  start-services.sh  start.sh  start_backend.sh  start_backend_simple.py  stop-services.sh  test-api.sh  test_agent_loop.py  test_app.py  test_backend.py  test_chat.py  test_chat_flow.py  (+1 more)
api/: main.py
backend/: 20260314024028.code-workspace  CHAT_FLOW_IMPLEMENTATION.md  CODE_STANDARDS_SUMMARY.md  DEVELOPMENT.md  GLOBAL_LOGGING_UPDATE.md  LOGGING_GUIDE.md  PROJECT_OVERVIEW.md  PYTHON312_GUIDE.md  docker-compose.yml  pyproject.toml  requirements_backup.txt  requirements_fixed.txt  requirements_flexible.txt  requirements_minimal.txt  start.sh  test_system.py
backend/api/: main.py
backend/config/: __init__.py  logging_config.py  settings.py
backend/core/: __init__.py  agent_runtime.py  dialogue_manager.py  llm_provider_factory.py  llm_skill_router.py  memory.py  natural_language_workflow.py  session_manager.py  skill_orchestrator.py
backend/core/agent_loop/: __init__.py  agent_loop.py  agent_session.py  context_manager.py  new_agent_runtime.py  thought.py  tool_registry.py
backend/llm/: __init__.py  vllm_client.py  zhipuai_client.py
backend/scripts/: init_db.py
backend/skills/data-analysis/: SKILL.md
backend/skills/data-analysis/scripts/: main.py
backend/skills/research-presentation/: SKILL.md
backend/skills/visualization/scripts/: main.py
config/: __init__.py  prompts.py  prompts_old.py
core/: agent_runtime.py  dialogue_manager.py  memory.py  session_manager.py  skill_manager.py  skill_orchestrator.py
ee2691d1d27647d98be6546d3aafec87/: overview.md
frontend/: .env.example  .eslintrc.cjs  API_GUIDE.md  NUXT_UI_MIGRATION.md  PROJECT_OVERVIEW.md  README.md  app.config.ts  app.vue  index.html  nuxt.config.ts  package-lock.json  package.json
frontend/assets/css/: main.css
frontend/composables/: api.ts
frontend/layouts/: default.vue
frontend/pages/: chat.vue  index.vue  skills.vue  test.vue
frontend/src/: App.vue
frontend/src/assets/styles/: main.css
frontend/src/router/: index.js
frontend/src/views/: Chat.vue  Home.vue  Skills.vue
models/: dialogue.py  memory.py  session.py
scripts/: check_code_style.py  init_db.py
skills/data-analysis/: SKILL.md
skills/data-analysis/scripts/: main.py
skills/knowledge-qa/: SKILL.md
skills/knowledge-qa/scripts/: main.py
skills/visualization/: SKILL.md
